Volume Heatmap Update

--- a/vectorbt_for_beginners.ipynb
+++ b/vectorbt_for_beginners.ipynb
@@ -78,7 +78,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ci4DFcz6a8jz",
         "outputId": "ba5d7140-387f-4b1d-d94c-0c471ffee30c"
@@ -152,7 +153,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "cLgcqamngine",
         "outputId": "2956b025-d1ce-4d42-c0fd-dfee54741e26"
@@ -177,7 +179,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "dZW8rZyVhjZI",
         "outputId": "f2d6d0c8-e26e-4964-a2d9-82a9794c3dec"
@@ -225,7 +228,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "6WMDKJhZiy3F",
         "outputId": "91b450cc-55c0-4c92-e17d-e8eda38fae77"
@@ -297,7 +301,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "vW0IAJSZknQh",
         "outputId": "c173c485-45fb-448d-f32e-5270ea1ce3ef"
@@ -358,7 +363,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "d1f8cRgmlLFZ",
         "outputId": "a3a5efdb-6c8a-4e37-9b4e-baa113c321dd"
@@ -461,7 +467,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ZjFQ8lD1bGWt",
         "outputId": "53b817cc-1a5e-40f9-e321-a51cc9a514d6"
@@ -534,7 +541,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "al4GJi6PqunE",
         "outputId": "07a2dfd1-4a29-485c-b7c8-95a866c82c0d"
@@ -693,7 +701,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "eSvWhAxNyCx_",
         "outputId": "4d855315-60ed-4d41-ccf1-13636cce8c33"
@@ -815,7 +824,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "fUDxDd-3bMuq",
         "outputId": "866b4190-58df-433a-c0cb-dbf4e893f801"
@@ -997,7 +1007,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "a2gw2uSADft8",
         "outputId": "d550f680-c7c2-4a79-dd05-a5eb836c45b7"
